tinyURL prepared for Credentials
